--- a/CinemaBook/Scence/Manager/Management/MangamentProduct/CreateProduct/view/cell/ItemFoodTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentProduct/CreateProduct/view/cell/ItemFoodTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,16 +18,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PORNCORN-TEST" translatesAutoresizingMaskIntoConstraints="NO" id="Ypd-nM-5vI">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PORNCORN-TEST" translatesAutoresizingMaskIntoConstraints="NO" id="Ypd-nM-5vI">
+                        <rect key="frame" x="0.0" y="-3" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="GBT-T6-eCX"/>
+                            <constraint firstAttribute="height" constant="50" id="Mpw-G3-F8I"/>
+                            <constraint firstAttribute="width" constant="50" id="cXd-jb-oeB"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BẮP NƯỚC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEZ-qD-YCW">
-                        <rect key="frame" x="117" y="11.5" width="86.5" height="21"/>
+                        <rect key="frame" x="117.5" y="11.5" width="85" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" systemColor="systemGreenColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-check-success" translatesAutoresizingMaskIntoConstraints="NO" id="ydi-qN-xzv">
@@ -38,12 +40,11 @@
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Ypd-nM-5vI" secondAttribute="bottom" id="304-Jw-Ykm"/>
                     <constraint firstItem="MEZ-qD-YCW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OrH-vk-JNe"/>
                     <constraint firstItem="ydi-qN-xzv" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QZl-mQ-I66"/>
-                    <constraint firstItem="Ypd-nM-5vI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Zde-4i-vjD"/>
+                    <constraint firstItem="Ypd-nM-5vI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="TJd-Ln-ZAF"/>
+                    <constraint firstItem="Ypd-nM-5vI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bvI-uM-bsp"/>
                     <constraint firstItem="MEZ-qD-YCW" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="gTY-0d-fml"/>
-                    <constraint firstItem="Ypd-nM-5vI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="laJ-4q-JyA"/>
                     <constraint firstAttribute="trailing" secondItem="ydi-qN-xzv" secondAttribute="trailing" constant="20" id="q16-kU-79Z"/>
                 </constraints>
             </tableViewCellContentView>
@@ -59,5 +60,8 @@
     <resources>
         <image name="PORNCORN-TEST" width="546" height="546"/>
         <image name="icon-check-success" width="19" height="14"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
