--- a/CinemaBook/Scence/Manager/HomeReportManager/view/HomeReportViewController.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/view/HomeReportViewController.xib
@@ -13,8 +13,12 @@
             <connections>
                 <outlet property="lbl_date" destination="B7P-SU-Isf" id="T2w-tl-H7s"/>
                 <outlet property="lbl_time" destination="f87-WB-Bqt" id="TbH-6l-NEP"/>
+                <outlet property="lbl_tittle_all" destination="frT-K1-gRr" id="JHN-FU-NMk"/>
+                <outlet property="lbl_tittle_all_report" destination="0rM-HE-OZN" id="QhO-eh-ieP"/>
                 <outlet property="tableView" destination="vrx-ci-0Ny" id="NQo-u2-1kl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_all" destination="UXO-4O-244" id="4Vc-7d-iMP"/>
+                <outlet property="view_all_report" destination="1eX-ta-V3m" id="loh-y4-ar4"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -44,11 +48,24 @@
                                                             <color key="textColor" red="0.078431372549019607" green="0.38431372549019605" blue="0.69019607843137254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Tb-06-NgA">
+                                                            <rect key="frame" x="0.0" y="0.0" width="187" height="46"/>
+                                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                            <connections>
+                                                                <action selector="btn_choose_all:" destination="-1" eventType="touchUpInside" id="5Ih-RO-lDv"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.8901960784313725" green="0.92549019607843142" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
+                                                        <constraint firstItem="6Tb-06-NgA" firstAttribute="top" secondItem="UXO-4O-244" secondAttribute="top" id="7bH-v4-Ii6"/>
+                                                        <constraint firstAttribute="trailing" secondItem="6Tb-06-NgA" secondAttribute="trailing" id="92a-NM-bBP"/>
                                                         <constraint firstItem="frT-K1-gRr" firstAttribute="centerY" secondItem="UXO-4O-244" secondAttribute="centerY" id="Evq-OO-aCm"/>
+                                                        <constraint firstItem="6Tb-06-NgA" firstAttribute="leading" secondItem="UXO-4O-244" secondAttribute="leading" id="R2a-Lg-0mc"/>
                                                         <constraint firstItem="frT-K1-gRr" firstAttribute="centerX" secondItem="UXO-4O-244" secondAttribute="centerX" id="aAa-zT-8mH"/>
+                                                        <constraint firstAttribute="bottom" secondItem="6Tb-06-NgA" secondAttribute="bottom" id="b3d-y2-dj4"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -62,7 +79,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eX-ta-V3m">
+                                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eX-ta-V3m">
                                                     <rect key="frame" x="187" y="0.0" width="187" height="46"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BÁO CÁO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rM-HE-OZN">
@@ -71,12 +88,30 @@
                                                             <color key="textColor" red="0.49019607843137253" green="0.49411764705882355" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkz-6I-zL6">
+                                                            <rect key="frame" x="0.0" y="0.0" width="187" height="46"/>
+                                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                            <connections>
+                                                                <action selector="btn_choose_all_report:" destination="-1" eventType="touchUpInside" id="9xp-SN-egV"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="fkz-6I-zL6" secondAttribute="trailing" id="0Q8-QV-Bnk"/>
                                                         <constraint firstItem="0rM-HE-OZN" firstAttribute="centerX" secondItem="1eX-ta-V3m" secondAttribute="centerX" id="72U-bs-ZXM"/>
+                                                        <constraint firstAttribute="bottom" secondItem="fkz-6I-zL6" secondAttribute="bottom" id="aGS-Tn-p6Y"/>
+                                                        <constraint firstItem="fkz-6I-zL6" firstAttribute="leading" secondItem="1eX-ta-V3m" secondAttribute="leading" id="i61-Jo-vmy"/>
                                                         <constraint firstItem="0rM-HE-OZN" firstAttribute="centerY" secondItem="1eX-ta-V3m" secondAttribute="centerY" id="w2Y-jG-De5"/>
+                                                        <constraint firstItem="fkz-6I-zL6" firstAttribute="top" secondItem="1eX-ta-V3m" secondAttribute="top" id="wB1-zs-zsP"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,7 +182,7 @@
                                 <constraint firstItem="o3h-od-US7" firstAttribute="leading" secondItem="RNV-he-S9i" secondAttribute="leading" constant="20" id="zbT-ar-CNM"/>
                             </constraints>
                         </view>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vrx-ci-0Ny">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vrx-ci-0Ny">
                             <rect key="frame" x="0.0" y="107" width="414" height="707"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
